[package]
name = "indirect_syscalls"
version = "0.1.0"
edition = "2024"
description = "Usermode technique to resolve and invoke syscalls without relying on the exported NTAPI functions"
author = "Damon@TSS"

[dependencies]
winapi = { version = "0.3", features = ["psapi", "libloaderapi", "errhandlingapi", "processthreadsapi", "memoryapi"] }
rustc-hash = "2.1.1"
once_cell = "1.21"
itertools = "0.14.0"